fixed getting started page spacing

--- a/app/assets/stylesheets/getting_started.scss
+++ b/app/assets/stylesheets/getting_started.scss
@@ -1,7 +1,13 @@
 #getting-started{
   .entry-content{
+    margin-top:0px;
     h2{
       margin-top: 0px;
+    }
+  }
+  .entry:not(:first-child){
+    .container{
+      padding-top:0px;
     }
   }
 }
